// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render a header correctly 1`] = `
<header
  className="modal-card-head"
>
  <div
    className="undefined modal-card-title"
  >
    <Component>
      Some address
    </Component>
    <Component>
      Some type
    </Component>
  </div>
  <button
    aria-label="close"
    className="delete"
    data-test="modal-close-button"
    onClick={[Function]}
  />
</header>
`;

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Fragment>
  <Component
    HeaderComponent={[Function]}
    afterClose={[MockFunction]}
    visible={true}
  >
    <div>
      <div>
        <FaClock />
        <Component>
          Time:
        </Component>
      </div>
      <div>
        <p>
          10 Jan 2020 10:27 AM - 10:40 AM
        </p>
      </div>
    </div>
    <div>
      <div>
        <FaHome />
        <Component>
          Property:
        </Component>
      </div>
      <Component
        dynamicLinkParams={
          Object {
            "appMode": "DESKTOP",
            "entityCode": "BED140946",
            "entityType": "properties",
          }
        }
      >
        <p>
          42, Mill Road, Sharnbrook, Bedford, Bedfordshire, MK44 1NX, GB
        </p>
      </Component>
    </div>
    <div>
      <div>
        <FaStickyNote />
        <Component>
          Entry Notes:
        </Component>
      </div>
      <p>
        It has windows, a roof and doors - it's basically a house.
      </p>
    </div>
    <div>
      <div>
        <FaHandshake />
        <Component>
          Arrangements:
        </Component>
      </div>
      <p>
        Don't let the cat in
      </p>
    </div>
    <Component>
      <Component
        disabled={false}
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        Cancel Appointment
      </Component>
    </Component>
  </Component>
</Fragment>
`;

exports[`AppointmentModal AppointmentModal should render correctly for confirm content 1`] = `
<Fragment>
  <Component
    HeaderComponent={[Function]}
    afterClose={[MockFunction]}
    visible={true}
  >
    <ConfirmContentWithRedux />
  </Component>
</Fragment>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Fragment>
  <Component
    HeaderComponent={[Function]}
    afterClose={[MockFunction]}
    visible={true}
  >
    <Component />
  </Component>
</Fragment>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <div>
    <div>
      <FaHome />
      <Component>
        Property:
      </Component>
    </div>
    <Component
      dynamicLinkParams={
        Object {
          "appMode": "DESKTOP",
          "entityCode": "SOME_ID",
          "entityType": "properties",
        }
      }
    >
      <p>
        65, Lindsey Close, Great Denham, Bedford, Bedfordshire, MK40 4GT
      </p>
    </Component>
  </div>
</div>
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot 1`] = `
<div>
  <Component
    items={
      Array [
        Object {
          "icon": <TiMail
            className="icon-list-icon"
          />,
          "text": <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>,
        },
      ]
    }
  />
</div>
`;

exports[`AppointmentModal renderCommunicationType should match snapshot 1`] = `
<div>
  <TiMail
    className="icon-list-icon"
  />
</div>
`;

exports[`AppointmentModal renderTime should match snapshot 1`] = `
<div>
  <div>
    <FaClock />
    <Component>
      Time:
    </Component>
  </div>
  <div>
    <p>
      18 Dec 2016 04:30 PM - 05:30 PM
    </p>
  </div>
</div>
`;
